# Interview-Bot

./: .gitignore  README.md  app.py  interview_logic.py  packages.txt  pyproject.toml  render.yaml  requirements.txt  session_manager.py  setup.sh  styles.css
.streamlit/: config.toml
