[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel>=0.41.2",
    "Cython>=3.0.6",
    "numpy>=1.24.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "interview-bot"
version = "1.0.0"
description = "An AI-powered interview preparation tool"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.27.2",
    "openai>=1.3.7",
    "python-dotenv>=1.0.0",
    "Pillow>=9.4.0",
    "pandas>=1.5.3",
]
