[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel>=0.41.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "interview-bot"
version = "1.0.0"
description = "An AI-powered interview preparation tool"
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
    "wheel>=0.41.2",
    "setuptools>=68.0.0",
    "numpy>=1.25.2",
    "python-dotenv>=1.0.0",
    "streamlit>=1.26.0",
    "openai>=1.3.7",
    "Pillow>=10.0.0",
    "pandas>=2.0.3",
    "typing-extensions>=4.7.1",
    "markupsafe>=2.1.3",
    "importlib-metadata>=6.8.0"
]
